--- a/myApp/functions/package.json
+++ b/myApp/functions/package.json
@@ -1,7 +1,6 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
-  "type": "module",
   "scripts": {
     "lint": "eslint .",
     "serve": "firebase emulators:start --only functions",
@@ -15,9 +14,14 @@
   },
   "main": "index.js",
   "dependencies": {
+    "axios": "^1.10.0",
+    "cheerio": "^1.1.0",
+    "dotenv": "^16.5.0",
     "firebase": "^11.9.1",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.0.1",
+    "openai": "^5.7.0",
+    "stripe": "^18.2.1"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
