--- a/myApp/package.json
+++ b/myApp/package.json
@@ -14,6 +14,7 @@
     "animejs": "^4.0.2",
     "axios": "^1.10.0",
     "cheerio": "^1.1.0",
+    "dotenv": "^16.5.0",
     "firebase": "^11.9.1",
     "framer-motion": "^12.18.1",
     "jquery": "^3.7.1",
